# algorithms

./: .gitignore  README.md
project_1/: generator.cpp  main.cpp  mergesort.cpp  quicksort.cpp
project_1/headers/: algorithms.h  generator.h  mergesort.h  quicksort.h
project_1/include/algorithms/: heapsort.h  insertsort.h  introsort.h  mergesort.h  quicksort.h
project_1/include/utils/: file.h  generator.h  tools.h
project_1/src/: main.cpp  test_sorting_algorithms.cpp
project_2/: CMakeLists.txt
project_2/include/graphs/: adjacency_list_graph.hpp  adjacency_matrix_graph.hpp  graph.hpp  shortest_path_algorithms.hpp
project_2/include/structures/: dynamic_array.hpp  linked_list.hpp  matrix.hpp
project_2/include/utils/: file.hpp  generator.hpp  node.hpp
project_2/not_used/: adjacency_matrix_graph.cpp  temp.txt
project_2/sp_data/graph/: graphV10D0.5.txt
project_2/src/: adjacency_list_graph.cpp  adjacency_matrix_graph.cpp  main.cpp  shortest_path_algorithms.cpp  sp_test_graphs.cpp
project_3/: CMakeLists.txt
project_3/include/core/: algorithm.h  board.h  board.hpp  logic.h  logic.hpp  tile.hpp
project_3/include/core/interface/: piece.h
project_3/include/core/interfaces/: piece.h
project_3/include/core/pieces/: bishop.hpp  o_piece.hpp  x_piece.hpp
project_3/include/layout/: button.hpp  label.hpp  textbox.hpp
project_3/src/: algorithm.cpp  board.cpp  logic.cpp  main.cpp
